# allhands

./: .allhands-codex-token  .gitignore  .goreleaser.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  start
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  architecture.md  prd.md
docs/superpowers/plans/: 2026-04-18-acp-mobile-host-v1-finish.md  2026-04-18-acp-mobile-host-v1.md  2026-04-18-codex-app-server.md  2026-04-18-control-room-new-session-flow.md
docs/superpowers/specs/: 2026-04-18-acp-mobile-host-design.md  2026-04-18-acp-mobile-host-v1-finish-design.md  2026-04-18-codex-app-server-design.md  2026-04-18-control-room-new-session-flow-design.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: navigation.spec.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: app.test.tsx  app.tsx  main.tsx
frontend/src/components/: approval-card.module.css  approval-card.tsx  install-banner.module.css  install-banner.tsx  markdown-content.tsx  new-session-sheet.module.css  new-session-sheet.test.tsx  new-session-sheet.tsx  prompt-box.module.css  prompt-box.tsx  session-actions.module.css  session-actions.tsx  session-card.module.css  session-card.tsx  session-tray.module.css  session-tray.tsx  timeline.module.css  timeline.tsx
frontend/src/lib/: api.ts  auth.ts  events.ts  http.test.ts  http.ts  new-session-store.test.ts  new-session-store.ts  push.test.ts  push.ts  session-detail-store.test.ts  session-detail-store.ts  session-store.test.ts  session-store.ts  timeline.ts
frontend/src/routes/: control-room.module.css  control-room.test.tsx  control-room.tsx  inbox.tsx  login.module.css  login.tsx  session.test.tsx  session.tsx
frontend/src/styles/: app.css  tokens.css
ios/: project.yml
ios/AllHandsApp/: AllHandsApp.swift  AppModel.swift  Info.plist  RootView.swift
ios/AllHandsKit/: Package.swift
ios/AllHandsKit/Sources/AllHandsKit/: APIClient.swift  ClientDiagnostics.swift  DiscoveryService.swift  LocalWebUIProxy.swift  Models.swift  SSEClient.swift  SessionStore.swift  TailnetTransport.swift
ios/AllHandsKit/Tests/AllHandsKitTests/: AllHandsKitTests.swift
scripts/: bootstrap_tailscalekit.sh  build_server_release.sh  build_server_release_docker.sh  generate-vapid-keys  generate_release_checksums.sh  server_release.Dockerfile
server/: agent_process.ml  agent_rpc.ml  agent_session.ml  allhands-server.opam  allhands_server.ml  bonjour_publisher.ml  dune  dune-project  event_mapper.ml  host_server.ml  http_server.ml  json_utils.ml  launcher_catalog.ml  models.ml  musl_compat.c  session_store.ml  test_event_mapper.ml  test_host_server_api.ml  test_integration.ml  test_launcher_catalog.ml  test_session_store.ml  test_sse.ml  test_worktree_manager.ml  ui_view.ml  worktree_manager.ml
server/test_support/: fake_acp_agent.py  sse_client.py
server/web_ui/: api.test.js  event_utils.test.js  session_store.test.js
server/web_ui/public/: api.js  app.css  app.js  event_utils.js  index.html  session_store.js  view.js
src/allhands_host/: acp_attachment.py  app.py  auth.py  codex_client.py  codex_daemon.py  codex_session_adapter.py  config.py  db.py  http.py  main.py  models.py  notifications.py  processes.py  repo_catalog.py  session_service.py  store.py  worktrees.py
src/allhands_host/launchers/: base.py  catalog.py  claude.py  codex.py  pi.py
tests/: test_acp_attachment.py  test_auth.py  test_codex_client.py  test_codex_daemon.py  test_codex_session_adapter.py  test_config.py  test_db.py  test_health.py  test_http_api.py  test_launchers.py  test_main.py  test_notifications.py  test_repo_catalog.py  test_server_info.py  test_session_service.py  test_store.py  test_worktrees.py
tests/fixtures/: fake_acp_agent.py
