opam-version: "2.0"
synopsis: "All Hands ACP host and mobile-facing SSE server"
maintainer: "All Hands"
authors: "All Hands"
license: "MIT"
depends: [
  "ocaml" {>= "5.4"}
  "dune" {>= "3.15"}
  "h1"
  "iomux"
  "yojson"
  "fmt"
  "logs"
  "crunch"
  "tyxml"
  "uri"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
