(library
 (name allhands_server_lib)
 (wrapped false)
 (libraries h1 iomux yojson logs unix)
 (foreign_stubs
  (language c)
  (names musl_compat))
 (modules
 build_info
 json_utils
 models
 launcher_catalog
 acp_transport
  bonjour_publisher
  http_server
  web_ui_assets
  worktree_manager
  agent_process
  agent_rpc
  agent_session
  session_store
  event_mapper
  host_server))

(rule
 (deps
  (source_tree web_ui/public))
 (targets web_ui_assets.ml)
 (action
  (run ocaml-crunch -m plain -o %{targets} web_ui/public)))

(rule
 (targets build_info.ml)
 (action
  (write-file %{targets}
   "let version = \"%{env:ALLHANDS_SERVER_VERSION=dev}\"\n")))

(rule
 (targets link_flags.sexp)
 (action
  (with-stdout-to %{targets}
   (bash "printf '%s\\n' \"${ALLHANDS_SERVER_LINK_FLAGS:-()}\""))))

(executable
 (name allhands_server)
 (modules allhands_server)
 (libraries allhands_server_lib logs logs.fmt unix)
 (link_flags (:include link_flags.sexp)))

(test
 (name test_event_mapper)
 (modules test_event_mapper)
 (libraries allhands_server_lib yojson))

(test
 (name test_session_store)
 (modules test_session_store)
 (libraries allhands_server_lib yojson unix))

(test
 (name test_worktree_manager)
 (modules test_worktree_manager)
 (libraries allhands_server_lib unix))

(test
 (name test_sse)
 (modules test_sse)
 (libraries allhands_server_lib yojson unix))

(test
 (name test_launcher_catalog)
 (modules test_launcher_catalog)
 (libraries allhands_server_lib yojson unix))

(test
 (name test_host_server_api)
 (modules test_host_server_api)
 (libraries allhands_server_lib yojson unix))

(test
 (name test_integration)
 (modules test_integration)
 (libraries allhands_server_lib yojson unix))
